<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:scaleType="fitStart"
        android:src="@drawable/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/content_desc_1" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="82.79dp"
            android:layout_height="55dp"
            android:src="@drawable/logo_v3"
            android:contentDescription="@string/university_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/university_name"
            android:textColor="@color/BackgroundColor"
            android:textSize="25.87sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_card_ui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/welcom_message"
                android:textColor="@color/textDarkColor"
                android:textSize="28sp" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp">

                        <EditText
                            android:id="@+id/email"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_input"
                            android:fontFamily="@font/urbanist_medium"
                            android:hint="@string/enter_your_email"
                            android:paddingStart="55dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:autofillHints="Enter your name"
                            tools:ignore="RtlSymmetry,TextFields" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="-10dp"
                            app:cardCornerRadius="5.45dp"
                            app:cardElevation="10dp"
                            app:layout_constraintBottom_toBottomOf="@+id/email"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.045"
                            app:layout_constraintStart_toStartOf="@+id/email"
                            app:layout_constraintTop_toTopOf="@+id/email"
                            app:layout_constraintVertical_bias="0.615">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/email"
                                android:contentDescription="@string/enter_your_email" />

                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_input"
                            android:fontFamily="@font/urbanist_medium"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"
                            android:paddingStart="55dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="RtlSymmetry"
                            android:autofillHints="Enter your password" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="-10dp"
                            app:cardCornerRadius="5.45dp"
                            app:cardElevation="10dp"
                            app:layout_constraintBottom_toBottomOf="@+id/password"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.045"
                            app:layout_constraintStart_toStartOf="@+id/password"
                            app:layout_constraintTop_toTopOf="@+id/password"
                            app:layout_constraintVertical_bias="0.615">

                            <ImageView
                                android:id="@+id/password_toggle"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center"
                                android:src="@drawable/eye_close"
                                android:contentDescription="@string/enter_your_password" />

                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <CheckBox
                        android:id="@+id/RememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textMediumColor"
                        android:checked="true"
                        android:fontFamily="@font/urbanist_medium"
                        android:textSize="14sp"
                        android:text="@string/remember_me"/>

                    <TextView
                        android:id="@+id/Forgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="15sp"
                        android:fontFamily="@font/urbanist_medium"
                        android:layout_marginBottom="20dp"
                        android:text="@string/forgot_password"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login"
                        style="@style/PrimaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="66dp"
                        android:fontFamily="@font/urbanist_semibold"
                        android:text="@string/login"
                        android:textSize="18sp"
                        app:cornerRadius="10dp"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>